<resources>
    <string name="app_title">PAPYRUTH</string>
    <string name="app_sub_title">University Course Evaluator</string>
    <string name="nav_item_home">Recent Evaluation</string>
    <string name="nav_item_search">Search</string>
    <string name="nav_item_recommendation">Recommendation</string>
    <string name="nav_item_bookmark">Bookmark</string>
    <string name="nav_item_new_evaluation">Evaluation</string>
    <string name="nav_item_my_evaluation">My evaluation</string>
    <string name="nav_item_my_comment">My comment</string>
    <string name="toolbar_title_course">Course Overview</string>
    <string name="toolbar_title_new_evaluation">New Evaluation</string>
    <string name="toolbar_title_home">Latest Evaluations</string>
    <string name="toolbar_title_new_comment">New Comment</string>
    <string name="toolbar_title_evaluation">Evaluation</string>
    <string name="toolbar_profile">My profile</string>
    <string name="toolbar_profile_register_university_email">Reginster University Email</string>
    <string name="toolbar_profile_change_nickname">Change Nickname</string>
    <string name="toolbar_profile_change_password">Change Password</string>
    <string name="toolbar_favorite">Favorite Course</string>
    <string name="toolbar_search">Search Course</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_osl">Open Source Licenses</string>
    <string name="toolbar_tos">Terms of Service</string>
    <string name="step1">step 1</string>
    <string name="step2">step 2</string>
    <string name="step3">step 3</string>
    <string name="step4">step 4</string>
    <string name="step5">step 5</string>
    <string name="entrance_year">Entrance year</string>
    <string name="agree_terms">If you sign up, you agree to the %1$s and %2$s.</string>
    <string name="agree">Agree</string>
    <string name="back">Disagree</string>
    <string name="terms_of_use">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="duplicated_email">duplicated email</string>
    <string name="duplicated_nickname">duplicated nickname</string>
    <string name="action_sign_in">Sign in</string>
    <string name="failed_sign_in">Failed to Signin</string>
    <string name="action_sign_up">Sign up</string>
    <string name="failed_sign_up">Failed to Signup</string>
    <string name="field_invalid_required">This field is required</string>
    <string name="field_invalid_email">Invalid e-mail format</string>
    <string name="field_invalid_password">Password is too short</string>
    <string name="field_wrong_password">Wrong password</string>
    <string name="field_invalid_realname">Name is too long</string>
    <string name="field_invalid_nickname">Nickname is too long</string>
    <string name="field_invalid_gender">There is no such gender.</string>
    <string name="field_invalid_entrance_year">Invalid range of entrance year</string>
    <string name="field_invalid_university">University not selected</string>
    <string name="field_exist_email">Email already exists</string>
    <string name="field_exist_nickname">Nicaname already exists</string>
    <string name="common_next">Next</string>
    <string name="common_submit">Submit</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_change">Change</string>
    <string name="common_pending">Pending Another Request</string>
    <string name="common_close">Close</string>
    <string name="common_wait_to_loading">please wait to loading</string>
    <string name="menu_search">Menu Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_favorite">Favorite</string>
    <string name="email_default">--NO-EMAIL-ASSIGNED--</string>
    <string name="signup_category_account">Account</string>
    <string name="signup_category_info">Additional</string>
    <string name="gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="entrance_prompt">Please select entrance year</string>
    <string name="entrance_postfix"/>
    <string name="confirm_exit">Press again to close application</string>
    <string name="submit_evaluation_success">Succeed to register Evaluation</string>
    <string name="submit_evaluation_fail">Failed to register Evaluation</string>
    <string name="fab_evaluation">New Evaluation</string>
    <string name="fab_comment">New Comment</string>
    <string name="label_point_overall">Overall</string>
    <string name="label_point_gpa_satisfaction">Satisfaction</string>
    <string name="label_point_clarity">Clarity</string>
    <string name="label_point_easiness">Easiness</string>
    <string name="lecture_type_major">MAJOR</string>
    <string name="lecture_type_liberal_arts">L.ARTS</string>
    <string name="lecture_type_etc">ETC</string>
    <string name="submit_comment_success">Succeed to register Comment</string>
    <string name="submit_comment_fail">Failed to register Comment</string>
    <string name="dialog_title_confirm_submit">Confirm Submission</string>
    <string name="dialog_content_configm_submit">Are you sure to send this form?</string>
    <string name="dialog_title_entrance_year">Please select your entrance year</string>
    <string name="fab_change_nickname">Change Nickname</string>
    <string name="fab_change_password">Change Password</string>
    <string name="fab_register_universtiy_email">Register University Email</string>
    <string name="failed_passwd">Failed to change password</string>
    <string name="navigation_drawer_open"/>
    <string name="navigation_drawer_close"/>
    <string name="empty"/>
    <string name="confirm_positive">OK</string>
    <string name="confirm_optional">DON\'T SHOW AGAIN</string>
    <string name="confirm_cancel">Cancel</string>
    <string name="inform_home">Latest Evaluations are provided.\n\nYou can see the latest evaluations by clicking it.</string>
    <string name="inform_course">Overall statistics for course and list of evaluations are provided.\n\nYou can open evaluation detail window by clicking the item.</string>
    <string name="inform_evaluation">Evaluations statistics and comments are provided.\n\nYou can vote up and down to both evaluation and comments.</string>
    <string name="inform_bookmark">I brought some evaluation that you told me you like it</string>
    <string name="inform_mandatory_evaluation">Must write over 3 evaluations.\n Remain %d.</string>
    <string name="goto_write">Write evaluation</string>
    <string name="inform_wrote_evaluation">You wrote evaluation this course. You can rewrite evaluation.</string>
    <string name="inform_email_confirm">We send confirm mail your account.\nDo you want to resend email?</string>
    <string name="inform_email_university_confirm">We send email your university account : %1$s\nDo you want to resend email?</string>
    <string name="goto_rewrite">Rewrite evaluation</string>
    <string name="no_data">No Data</string>
    <string name="no_data_my_evaluation">Can\'t find the evaluation you wrote.</string>
    <string name="no_data_my_comment">Can\'t find the comment you wrote.</string>
    <string name="no_data_evaluation">Not exist evaluation.</string>
    <string name="no_data_comment">Not exist comment.</string>
    <string name="no_data_favorite">Not exist my favorite</string>
    <string name="no_data_search">No search result</string>
    <string name="no_data_history">No search history</string>
    <string name="no_data_you_cant">You can\'t view any evaluation.</string>
    <string name="professor_prefix">PROF. </string>
    <string name="professor_postfix"/>
    <string name="just_now">just now</string>
    <string name="time_ago">%s ago</string>
    <string name="yesterday">yesterday</string>
    <string name="point_overall">Total</string>
    <string name="category_major">MAJOR</string>
    <string name="lorem_ipsum"><b>Lorem      ipsum</b>\n\n dolor sit amet, consectetur adipiscing elit. Fusce pulvinar, leo in fermentum sollicitudin, odio turpis lobortis purus, vitae tempus leo libero ut diam. Integer rhoncus turpis at viverra venenatis. In convallis lobortis tellus, et fringilla quam convallis a. Ut consequat lobortis egestas. Mauris euismod, tortor vitae tristique dignissim, felis dolor malesuada arcu, at pulvinar lacus magna quis ex. Nunc quis tincidunt turpis, eget lobortis odio. Nunc mi magna, feugiat eget orci at, efficitur laoreet nisi. Morbi eros magna, pellentesque non viverra sit amet, tristique ut diam. Aenean hendrerit congue sem, ac facilisis mi hendrerit a. In sit amet euismod tellus. Aliquam egestas porta nunc, a dictum lacus ullamcorper quis. Proin ut quam et metus dapibus tempor id id quam. Curabitur et sapien massa.
Vestibulum maximus aliquam purus quis consectetur. Etiam metus lorem, aliquam at sagittis quis, feugiat a tellus. Quisque placerat, quam in vehicula faucibus, nisl lacus ullamcorper metus, sit amet malesuada turpis urna at dui. Sed volutpat nibh ex, vitae porttitor mauris pulvinar id. Quisque hendrerit ornare eros, eget sodales sem porta eget. Praesent molestie nibh erat, ut gravida libero suscipit ut. Vestibulum et erat elementum, mollis nulla ut, molestie massa. Integer nibh turpis, pulvinar vitae velit quis, aliquam gravida magna.
Nunc sem tortor, sagittis a interdum vel, elementum at dui. Maecenas quis lacinia purus, eget mattis arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla luctus tortor nisl, dictum porta nisl consequat vel. Nulla condimentum efficitur facilisis. Nullam ante dolor, maximus eget urna in, ultricies rutrum orci. Praesent feugiat diam non nunc sodales, sit amet semper metus ornare. Nam finibus consequat metus id tincidunt. Phasellus sollicitudin lacus ex, vitae pulvinar erat condimentum eget. Duis ullamcorper urna tellus, eget pulvinar mauris lobortis tincidunt. Vivamus suscipit malesuada neque quis aliquet.
Fusce diam purus, interdum id vulputate vel, egestas sed turpis. Duis id semper eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque porttitor augue elementum, pulvinar urna nec, faucibus nulla. Pellentesque id egestas lacus. Donec ut justo eu massa semper ultricies. Cras a porttitor lectus. Cras viverra sapien in nunc pellentesque porta. Sed sagittis tempus tellus, molestie faucibus nisl sodales eu. Maecenas tempus sapien ex, non tincidunt ex pharetra et. Quisque et maximus risus, sit amet dapibus libero. Pellentesque sapien lacus, iaculis vitae convallis at, semper at neque.
Fusce congue tellus in nulla luctus rutrum vitae fringilla ligula. Nullam facilisis sapien nibh, sit amet aliquam nulla laoreet pretium. Etiam porta maximus magna vitae pellentesque. Donec eget tortor sodales, sagittis quam at, aliquam tellus. Mauris vel sapien tellus. Integer sit amet est maximus, porttitor turpis id, tempor nunc. Phasellus blandit imperdiet lacus vitae pharetra. Aenean tristique ligula orci, vel venenatis odio pellentesque eget. Sed libero magna, vulputate at sodales nec, lacinia ut nisl. Suspendisse tincidunt dui ac ultrices convallis. Donec in augue convallis, dapibus odio molestie, vehicula orci. In vitae dolor cursus, bibendum mauris at, lobortis mauris. Vivamus dignissim et lacus eget pretium. Fusce laoreet arcu ut odio bibendum ornare. Vestibulum at sem ac nibh faucibus laoreet sit amet in eros. Nam pellentesque bibendum posuere.</string>
    <string name="my_profile">My profile</string>
    <string name="exit">EXIT</string>
    <string name="opensourse_license">Open sourse License</string>
    <string name="confirm_university_email">Email Not Confirmed</string>
    <string name="new_evaluation_submit_title">Submit New Evaluation</string>
    <string name="label_signout">Sign Out</string>
    <string name="label_osl">Open Source Licenses</string>
    <string name="label_tos">Terms of Service</string>
</resources>