<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_marginBottom="20dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="#ddd"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/logo"
                android:src="@drawable/ic_light_edit"
                android:layout_gravity="center"
                android:layout_width="48dp"
                android:layout_height="48dp"/>
            <TextView
                android:text="@string/app_name"
                android:textColor="@color/background_material_dark"
                android:textSize="40sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/sub_title"
                android:textColor="@color/background_material_dark"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/action_sign_up"
                android:textColor="@color/fg_normal"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            >
            <TableRow android:layout_width="match_parent">
                <View
                    android:layout_height="8dp"
                    android:background="#bbb"
                    android:layout_marginRight="2dp"
                    android:id="@+id/step1"/>
                <View
                    android:layout_height="8dp"
                    android:background="#bbb"
                    android:layout_marginRight="2dp"
                    android:id="@+id/step2"/>
                <View
                    android:layout_height="8dp"
                    android:background="#bbb"
                    android:layout_marginRight="2dp"
                    android:id="@+id/step3"/>
                <View
                    android:layout_height="8dp"
                    android:background="#bbb"
                    android:layout_marginRight="2dp"
                    android:id="@+id/step4"/>
                <View
                    android:layout_height="8dp"
                    android:background="#bbb"
                    android:layout_marginRight="2dp"
                    android:id="@+id/step5"/>
            </TableRow>
            <TableRow
                android:background="@color/white">

                <TextView
                    android:text="@string/step1"
                    android:layout_gravity="center"/>

                <TextView
                    android:text="@string/step2"
                    android:layout_gravity="center"/>

                <TextView
                    android:text="@string/step3"
                    android:layout_gravity="center"/>

                <TextView
                    android:text="@string/step4"
                    android:layout_gravity="center"/>
                <TextView
                    android:text="@string/step5"
                    android:layout_gravity="center"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <!--<com.montserrat.utils.view.viewpager.FlexibleViewPager-->
        <!--android:id="@+id/signup_container"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"/>-->
</LinearLayout>