<com.papyruth.utils.view.navigator.NavigatableFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingTop="?attr/actionBarSize">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/application_logo"
            android:layout_width="@dimen/baseline_x20"
            android:layout_height="@dimen/baseline_x20"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/baseline_x1"
            android:src="@drawable/logo"
            android:contentDescription="@string/empty"/>
        <TextView
            android:id="@+id/application_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/application_logo"
            android:layout_marginBottom="@dimen/baseline_x1"
            android:gravity="center"
            android:text="@string/app_sub_title"
            android:textSize="@dimen/basefont_x1.5"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/application_title"
            android:orientation="vertical">
            <include layout="@layout/hr_settings"/>
            <RelativeLayout
                android:id="@+id/tos_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/baseline_x7"
                android:background="@drawable/button_background_settings">
                <ImageView
                    android:id="@+id/tos_icon"
                    android:layout_width="@dimen/baseline_x3"
                    android:layout_height="@dimen/baseline_x3"
                    android:layout_marginLeft="@dimen/baseline_x2"
                    android:layout_marginStart="@dimen/baseline_x2"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_light_evaluation"
                    android:contentDescription="@string/empty"/>
                <TextView
                    android:id="@+id/tos_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/baseline_x4"
                    android:layout_marginStart="@dimen/baseline_x4"
                    android:layout_toRightOf="@+id/tos_icon"
                    android:layout_toEndOf="@+id/tos_icon"
                    android:layout_marginRight="@dimen/baseline_x3"
                    android:layout_marginEnd="@dimen/baseline_x3"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/label_tos"
                    android:textStyle="bold"
                    android:textSize="@dimen/basefont_x1.5"/>
            </RelativeLayout>
            <include layout="@layout/hr_settings"/>
            <RelativeLayout
                android:id="@+id/osl_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/baseline_x7"
                android:background="@drawable/button_background_settings">
                <ImageView
                    android:id="@+id/osl_icon"
                    android:layout_width="@dimen/baseline_x3"
                    android:layout_height="@dimen/baseline_x3"
                    android:layout_marginLeft="@dimen/baseline_x2"
                    android:layout_marginStart="@dimen/baseline_x2"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_light_evaluation"
                    android:contentDescription="@string/empty"/>
                <TextView
                    android:id="@+id/osl_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/baseline_x4"
                    android:layout_marginStart="@dimen/baseline_x4"
                    android:layout_toRightOf="@+id/osl_icon"
                    android:layout_toEndOf="@+id/osl_icon"
                    android:layout_marginRight="@dimen/baseline_x3"
                    android:layout_marginEnd="@dimen/baseline_x3"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/label_osl"
                    android:textStyle="bold"
                    android:textSize="@dimen/basefont_x1.5"/>
            </RelativeLayout>
            <include layout="@layout/hr_settings"/>
            <RelativeLayout
                android:id="@+id/signout_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/baseline_x7"
                android:background="@drawable/button_background_settings">
                <ImageView
                    android:id="@+id/signout_icon"
                    android:layout_width="@dimen/baseline_x3"
                    android:layout_height="@dimen/baseline_x3"
                    android:layout_marginLeft="@dimen/baseline_x2"
                    android:layout_marginStart="@dimen/baseline_x2"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/logout"
                    android:contentDescription="@string/empty"/>
                <TextView
                    android:id="@+id/signout_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/baseline_x4"
                    android:layout_marginStart="@dimen/baseline_x4"
                    android:layout_toRightOf="@+id/signout_icon"
                    android:layout_toEndOf="@+id/signout_icon"
                    android:layout_marginRight="@dimen/baseline_x3"
                    android:layout_marginEnd="@dimen/baseline_x3"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/label_signout"
                    android:textStyle="bold"
                    android:textSize="@dimen/basefont_x1.5"/>
            </RelativeLayout>
            <include layout="@layout/hr_settings"/>
        </LinearLayout>
    </RelativeLayout>
</com.papyruth.utils.view.navigator.NavigatableFrameLayout>



